<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <View
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:background="@mipmap/bg_slide"
        ></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bg_view"
        android:background="@color/color_f8f8f8"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_60"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/rl_temperature"
                android:layout_width="@dimen/dp_121"
                android:layout_height="@dimen/dp_121"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_tv"
                >
                <TextView
                    android:id="@+id/tv_temperatrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="25"
                    android:textColor="@color/color_111111"
                    android:textSize="@dimen/sp_30"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_temperatrue"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/color_999999"
                    android:text="℃"
                    android:layout_marginTop="@dimen/dp_8"
                    />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_air_down"
                android:layout_toLeftOf="@+id/rl_temperature"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_25"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_air_up"
                android:layout_toRightOf="@+id/rl_temperature"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_25"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_40"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_energy"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@mipmap/icon_air_01"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_energy"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_energy"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_comfort"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_air_02"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_comfort"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_comfort"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_sleep"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_air_03"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_sleep"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_sleep"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_swing"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_air_04"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_swing"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_swing"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_wind"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_air_05"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_wind"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_wind"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_40"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_off"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@mipmap/icon_air_06"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_off"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_off"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_dry"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_air_07"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_dry"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_dry"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_cool"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_air_08"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_cool"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_cool"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_heat"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_air_09"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_heat"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_heat"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_timer"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_air_10"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_timer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/air_timer"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

    <com.jb.jb_library.banner.BannerView
        android:id="@+id/banner_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        app:canLoop="true"
        app:indicatorAlign="center"
        app:indicatorPaddingLeft="@dimen/dp_10"
        app:loopAutoPlay="false"
        app:middle_page_cover="false"
        app:open_mz_mode="true"
        >

    </com.jb.jb_library.banner.BannerView>

</RelativeLayout>