<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <View
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:background="@mipmap/bg_slide"
        ></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bg_view"
        android:background="@color/color_f8f8f8"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_90"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_40"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_close_curtain"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@mipmap/icon_curtain_closed"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_close_curtain"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/curtain_colse"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_stop_curtain"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_curtain_stop"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_stop_curtain"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/curtain_stop"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <RelativeLayout
                    android:id="@+id/rl_open_curtain"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/selector_small_btn_bg"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_curtain_open"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_open_curtain"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/curtain_open"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/sp_11"
                    />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <com.jb.jb_library.banner.BannerView
        android:id="@+id/banner_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        app:canLoop="true"
        app:indicatorAlign="center"
        app:indicatorPaddingLeft="@dimen/dp_10"
        app:loopAutoPlay="false"
        app:middle_page_cover="false"
        app:open_mz_mode="true"
        >

    </com.jb.jb_library.banner.BannerView>

</RelativeLayout>